# nimbis

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy.toml  codecov.yml  justfile  prek.toml  scratch.rs
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pr-title-checker-config.json  release-drafter.yml
conf/: config_template.toml
config/: config_template.toml  config_with_minio_template.toml
crates/command/: Cargo.toml
crates/command/src/: get.rs  group_config.rs  lib.rs  ping.rs  set.rs
crates/config/: Cargo.toml
crates/config-derive/: Cargo.toml
crates/config-derive/src/: lib.rs
crates/config/src/: lib.rs
crates/config/tests/: test_derive.rs
crates/macros/: Cargo.toml
crates/macros/tests/: test_derive.rs
crates/nimbis/: Cargo.toml
crates/nimbis-resp/: Cargo.toml  README.md  README_zh.md
crates/nimbis-resp/benches/: benchmarks.rs
crates/nimbis-resp/src/: encoder.rs  error.rs  lib.rs  parser.rs
crates/nimbis-resp/tests/: encoder_tests.rs  parser_tests.rs
crates/nimbis/src/: cli.rs  client.rs  cmd.rs  config.rs  context.rs  dispatcher.rs  lib.rs  logo.rs  main.rs  resp_encoder.rs  server.rs  worker.rs
crates/nimbis/src/cmd/: cmd_append.rs  cmd_client.rs  cmd_config.rs  cmd_decr.rs  cmd_del.rs  cmd_exists.rs  cmd_expire.rs  cmd_flushdb.rs  cmd_get.rs  cmd_hdel.rs  cmd_hello.rs  cmd_hget.rs  cmd_hgetall.rs  cmd_hlen.rs  cmd_hmget.rs  cmd_hset.rs  cmd_incr.rs  cmd_llen.rs  cmd_lpop.rs  cmd_lpush.rs  cmd_lrange.rs  cmd_meta.rs  cmd_ping.rs  cmd_rpop.rs  cmd_rpush.rs  cmd_sadd.rs  cmd_scard.rs  cmd_set.rs  cmd_sismember.rs  cmd_smembers.rs  cmd_srem.rs  cmd_table.rs  cmd_trait.rs  cmd_ttl.rs  cmd_zadd.rs  cmd_zcard.rs  cmd_zrange.rs  cmd_zrem.rs  cmd_zscore.rs  get.rs  (+8 more)
crates/nimbis/src/config/: mod.rs
crates/nimbis/tests/: native_integration_smoke.rs  test_command.rs
crates/nimbis/tests/common/: mock.rs  utils.rs
crates/nimbis/tests/mock/: mock_client.rs  mock_server.rs  mod.rs  utils.rs
crates/resp/: Cargo.toml  README.md  justfile
crates/resp/benches/: benchmarks.rs
crates/resp/examples/: basic_usage.rs  parse_stream.rs
crates/resp/src/: encode.rs  encoder.rs  error.rs  lib.rs  parser.rs  types.rs  utils.rs
crates/resp/tests/: encoder_tests.rs  error_codes_tests.rs  parser_tests.rs  test_streaming.rs
crates/storage/: Cargo.toml
crates/storage/benches/: benchmarks.rs
crates/storage/src/: compaction_filter.rs  data_type.rs  error.rs  expirable.rs  lib.rs  lock_manager.rs  storage.rs  storage_hash.rs  storage_list.rs  storage_set.rs  storage_string.rs  storage_zset.rs  util.rs  utils.rs  version.rs
crates/storage/src/hash/: field_key.rs
crates/storage/src/list/: element_key.rs
crates/storage/src/meta/: hash_value.rs  key.rs  mod.rs
crates/storage/src/set/: member_key.rs
crates/storage/src/string/: key.rs  meta.rs  mod.rs  value.rs
crates/storage/src/zset/: member_key.rs  score_key.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  logger.rs  manager.rs  trace.rs
crates/telemetry/src/logger/: mod.rs
docs/: ci.md  cmd_implementation.md  command_arity.md  commands.md  config.md  config_crate.md  config_design.md  config_toml.md  crates_organization.md  error_handling.md  go_integration_tests.md  go_integration_tests.md.bak  nimbis_resp_design_and_usage.md  redis-benchmark.md  resp_design.md  scripts.md  server_design.md  slatedb_redis_design.md  storage_design.md  storage_implementation.md  storage_version_design.md  ttl_implementation_design.md  worker_design.md  xtask.md
e2e-test/: client_group_test.go  collision_test.go  concurrency_test.go  config_test.go  conflict_key_test.go  delete_test.go  go.mod  hash_test.go  hello_test.go  list_test.go  route_test_helpers.go  set_test.go  string_test.go  suite_test.go  ttl_test.go  version_test.go  zset_test.go
nimbis/: Cargo.toml  build.rs
nimbis-macros/: Cargo.toml
nimbis-macros/src/: lib.rs
nimbis-macros/tests/: test_derive.rs  test_storage_lock.rs
nimbis-resp/: Cargo.toml  README.md  justfile
nimbis-storage/: Cargo.toml
nimbis-storage/benches/: benchmarks.rs
nimbis-storage/src/: compaction_filter.rs  error.rs  lib.rs  lock.rs  segment.rs  storage.rs  storage_hash.rs  storage_list.rs  storage_set.rs  storage_string.rs  storage_zset.rs  utils.rs  version.rs
nimbis-storage/src/hash/: field_key.rs  mod.rs
nimbis-storage/src/list/: element_key.rs  mod.rs
nimbis-storage/src/set/: member_key.rs  mod.rs
nimbis-storage/src/string/: key.rs  meta.rs  mod.rs
nimbis-storage/src/zset/: member_key.rs  mod.rs  score_key.rs
nimbis-storage/tests/: test_lock.rs  test_segments.rs  test_storage_locking.rs
nimbis-telemetry/: Cargo.toml
nimbis-telemetry/src/: lib.rs  logger.rs  manager.rs  trace.rs  tracer.rs
nimbis/src/: cli.rs  client.rs  config.rs  context.rs  coordinator.rs  dispatcher.rs  key_hash.rs  lib.rs  lock_manager.rs  main.rs  server.rs  worker.rs
nimbis/src/cmd/: cmd_append.rs  cmd_client.rs  cmd_config.rs  cmd_decr.rs  cmd_del.rs  cmd_exists.rs  cmd_expire.rs  cmd_flushdb.rs  cmd_get.rs  cmd_hdel.rs  cmd_hello.rs  cmd_hget.rs  cmd_hgetall.rs  cmd_hlen.rs  cmd_hmget.rs  cmd_hset.rs  cmd_incr.rs  cmd_llen.rs  cmd_lpop.rs  cmd_lpush.rs  cmd_lrange.rs  cmd_mget.rs  cmd_mset.rs  cmd_msetnx.rs  cmd_ping.rs  cmd_rpop.rs  cmd_rpush.rs  cmd_sadd.rs  cmd_scard.rs  cmd_sdiff.rs  cmd_set.rs  cmd_sinter.rs  cmd_sismember.rs  cmd_smembers.rs  cmd_srem.rs  cmd_sunion.rs  cmd_ttl.rs  cmd_zadd.rs  cmd_zcard.rs  cmd_zrange.rs  (+5 more)
nimbis/tests/: test_command.rs
nimbis/tests/mock/: mock_client.rs  mock_server.rs  utils.rs
resp/: Cargo.toml  README.md  README_zh.md  justfile
resp/benches/: benchmarks.rs
resp/examples/: basic_usage.rs
resp/src/: encoder.rs  error.rs  lib.rs  parser.rs  types.rs  utils.rs
resp/tests/: encoder_tests.rs  parser_tests.rs
scripts/: check_code_fmt.rs  check_numbered_comments.rs  check_workspace_deps.rs  compare_benchmarks.rs
xtask/: Cargo.toml
xtask/src/: benchmarks.rs  checks.rs  lib.rs  main.rs  redis_benchmark.rs
(+41 files in other folders)
