[workspace]
resolver = "3"
members = [
    "crates/resp",
    "crates/nimbis",
    "crates/telemetry",
    "crates/storage",
    "crates/macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["marsevilspirit <marsevilspirit@gmail.com>"]
license = "MIT"
repository = "https://github.com/marsevilspirit/nimbis"

[workspace.dependencies]
# Local Dependencies
macros = { path = "crates/macros" }
resp = { path = "crates/resp" }
storage = { path = "crates/storage" }
telemetry = { path = "crates/telemetry" }

# Dependencies
arc-swap = "1.8.2"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
futures = "0.3.31"
log = "0.4.29"
memchr = "2.8.0"
num_cpus = "1.17.0"
object_store = "0.13.1"
quote = "1.0.44"
slatedb = { git = "https://github.com/slatedb/slatedb.git", rev = "b1e9e7a63b2bd174b3b43b79681640ce9c4baec4", features = [
    "foyer",
    "compaction_filters",
] }
syn = { version = "2.0.114", features = ["full"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

# Dev Dependencies
criterion = { version = "0.8.1", features = ["html_reports"] }
rstest = "0.26.1"
ulid = "1.2.1"
