[workspace]
resolver = "3"
members = [
    "crates/resp",
    "crates/nimbis",
    "crates/telemetry",
    "crates/storage",
    "crates/macros",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["marsevilspirit <marsevilspirit@gmail.com>"]
license = "MIT"
repository = "https://github.com/marsevilspirit/nimbis"

[workspace.dependencies]
# Local Dependencies
macros = { path = "crates/macros" }
resp = { path = "crates/resp" }
storage = { path = "crates/storage" }
telemetry = { path = "crates/telemetry" }

# Dependencies
arc-swap = "1.8.1"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = "0.4.43"
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "6.1.0"
fastrace = "0.7.17"
fastrace-opentelemetry = "0.16.0"
futures = "0.3.31"
log = "0.4.29"
memchr = "2.8.0"
num_cpus = "1.17.0"
object_store = "0.13.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
quote = "1.0.45"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
slatedb = { git = "https://github.com/slatedb/slatedb", branch = "main", features = ["foyer", "compaction_filters"] }
syn = { version = "2.0.114", features = ["full"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.0.1"
toml_edit = "0.23.7"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
url = "2.5.8"
walkdir = "2.5.0"

# Dev Dependencies
criterion = { version = "0.8.1", features = ["html_reports"] }
rstest = "0.26.1"
serial_test = { version = "3.2.0", features = ["file_locks"] }
ulid = "1.2.1"
