[package]
name = "nimbis-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
fastrace.workspace = true
futures = { workspace = true }
log = { workspace = true }
slatedb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

[lib]
doctest = false
