[package]
name = "resp"
version = "0.1.0"
edition = "2021"
authors = ["Mars <marsevilspirit@gmail.com>"]
description = "High-performance RESP (Redis Serialization Protocol) library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marsevilspirit/nimbis"

[dependencies]
bytes = "1.5"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "resp"
path = "src/lib.rs"
