[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
toml_edit = { workspace = true }
walkdir = { workspace = true }

[lib]
doctest = false
