[package]
name = "command"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
resp = { workspace = true }
storage = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
