[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime configuration for Nimbis"

[dependencies]
config-derive = { workspace = true }

arc-swap = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
