[package]
name = "resp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance RESP (Redis Serialization Protocol) library"
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.5"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
