[package]
name = "nimbis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
resp = { workspace = true }
telemetry = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
config = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
