[package]
name = "nimbis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
config = { workspace = true }
resp = { workspace = true }
storage = { workspace = true }
telemetry = { workspace = true }

arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
